Fixed the size of the images in the Image Carousel. Now fit inside box. No overflow.

--- a/chisha.css
+++ b/chisha.css
@@ -2,14 +2,14 @@
 
 body{
 background-color: #FBDA61;
-background-image: linear-gradient(65deg, #FBDA61 0%, #FF5ACD 60%, #00FFFF 110%);
+background-image: linear-gradient(65deg, #FBDA61 0%, #FF5ACD 50%, #00FFFF 110%);
 background-size: 200% 100%;
-animation: gradient 5s linear infinite alternate;
+animation: gradient 4s linear infinite alternate;
 height: 100vh;
 display: flex;
 justify-content: left;
 font-family: Open Sans, sans-serif;
-font-size: larger;
+font-size: large;
 writing-mode: horizontal-rl;
 display: block;
 }
@@ -27,39 +27,31 @@ h1 {
     color: white;
     font-family: Open Sans, sans-serif;
     font-weight: 200;
-    font-size: 6rem;
+    font-size: 5rem;
     letter-spacing: 1rem;
     text-align: center;
-    padding: 20px;
 }
 
 h2 {
     color: white;
     font-weight: 200;
-    font-size: 5rem;
+    font-size: 2rem;
     letter-spacing: 0.25rem;
     text-align: center;
 }
 
-h3 {
-  color: white;
-  font-weight: 200;
-  font-size: 2rem;
-  letter-spacing: 0.25rem;
-  text-align: center;
-}
 
-
+/* TABS */
 [data-tab-content] {
   display: none;
 }
-
+/* element displayed as a block fills screen*/
 .active[data-tab-content] {
-  display: block;        /* element displayed as a block fills screen*/
+  display: block;        
 }
-
-body {                  /* border line will fill whole screen horizontally*/
-  padding: 10px;
+/* border line will fill whole screen horizontally*/
+body {                  
+  padding: 1px;
   margin: 0;
 }
 
@@ -87,8 +79,9 @@ body {                  /* border line will fill whole screen horizontally*/
 }
 
 .tab-content {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: none;
 }
 
 
@@ -96,40 +89,52 @@ body {                  /* border line will fill whole screen horizontally*/
 
 /* Slideshow container */
 .slideshow-container {
+  width: auto;
   max-width: 600px;
-  max-height: 400px;
+  max-height: 250px;
   position: relative;
-  margin: auto;
+  margin: 0 auto;
   border: solid 3px white;
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+  width: 100%;
 }
 
-/* Previous Next buttons */
+.mySlides img {
+ width: 600px;
+ height: 250px;
+}
+
+/* Position of buttons middle edge of slideshow container*/
+.slide-controls {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Style color each button" */
 #prev, #next {
   cursor: pointer;
-  position: center;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color:white;
-  font-weight: bold;
-  font-size: 15px;
-  border-radius: 0px 3px 3px 0px;
-  user-select: none;
+  background: transparent;
+  font-size: 20px;
+  border: none;
+  padding: 10px;
+  color: white;
+}
+/* Outline style of button removed */
+#prev:focus, #next:focus {
+  outline: none;
 }
 
-/* Position the "next button" */
-#next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover of buttons, add transparency background color */
+/* Hover buttons transparency background color */
 #prev:hover, #next:hover {
   background-color: rgba(0,0,0,0.8);
 } 
